--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,7 @@ hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.generate_statistics=true
-#hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create
 
 # ============================================================================
 # mail
